Mô tả thay đổi của bạn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <p>khanh dep trai</p>
     <h1>anh dep trai</h1>
     <a href="/index.html">home <br /></a>
     <a href="/trang2.html">vao trang 2 <br></a>
