--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <p>khanh dep trai</p>
     <h1>anh dep trai</h1>
     <a href="/index.html">home <br /></a>
-    <a href="/trang2.html">vao trang 2 <br></a>
-    <a href="trang2.html"><img src="/img/image.png" width="100" alt="anh dieu huong" /></a>
+    <a href="/trang2.html">vao trang 2 <br /></a>
+    <a href="trang2.html"
+      ><img src="/img/image.png" width="100" alt="anh dieu huong"
+    /></a>
+    <a href="index.html">test</a>
   </body>
 </html>
